--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   timer_count_down: ^2.2.2
   carousel_slider: ^4.2.1
   item_count_number_button: ^1.9.2
+  http: ^1.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
