--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   item_count_number_button: ^1.9.2
   http: ^1.2.0
   shared_preferences: ^2.2.2
+  regexed_validator: ^2.0.0+1
+  webview_flutter: ^4.5.0
 
 dev_dependencies:
   flutter_test:
